[package]
name = "api_user"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = "7.0.5"
async-graphql-axum = "7.0.5"
axum = "0.7.5"
serde = "1.0.203"
tokio = {version = "1.37.0", features = ["full"]}
